assets/src/css/footer/_.scss
body > footer {
	background: #111;
	color: #888;

	font-size: 0.35rem;

	.row-container {
		padding: 2em 0;
		
		@media (max-width: $breakwidth-small) {
			padding: 2em 1em;
			text-align: center;
			line-height: 1.5;
		}
	}

	.copyright {
		display: inline-block;
		border-right: 1px solid rgba(255,255,255,0.5);

		padding-right: 1.5em;
		margin-right: 1.5em;

		@media (max-width: $breakwidth-small) {
			display: block;
			border: 0;
			padding: 0;
			margin: 0;
		}
	}

	nav {
		display: inline-block;

		li {
			display: inline-block;
			border-right: 1px solid rgba(255,255,255,0.3);
			padding: 0 .5em;

			&:last-child {
				border-right: 0;
			}
		}

		a {
			color: #aaa;;

			text-decoration: none;

			&:hover {
				color: #fff;
				text-decoration: underline;
			}
		}
	}

}

